--- a/crud-react/package.json
+++ b/crud-react/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "firebase": "^11.9.0",
     "qrcode.react": "^4.2.0",
