--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "lint": "eslint .",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "22"
+  },
+  "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1",
-    "cors": "^2.8.5",
-    "firebase-admin": "^11.0.0"
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "eslint": "^8.15.0",
+    "eslint-config-google": "^0.14.0",
+    "firebase-functions-test": "^3.1.0"
+  },
+  "private": true
 }
